Bug 149588 - FILEOPEN PPTX: text box shows that does not show in PowerPoint
Summary: FILEOPEN PPTX: text box shows that does not show in PowerPoint
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.6.0 target:7.4.6 target:7.5.0.2
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Textbox
  Show dependency treegraph
 
Reported: 2022-06-16 16:44 UTC by Gerald Pfeifer
Modified: 2023-01-24 10:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample slide (PPTX) (64.85 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-06-16 16:44 UTC, Gerald Pfeifer
Details
Visual comparison Office 365 (left) vs LibreOffice 7.4 (right) (248.48 KB, image/png)
2022-06-16 16:45 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-06-16 16:44:43 UTC
Created attachment 180799 [details]
Sample slide (PPTX)

Opening the sample document in LibreOffice the two words "Edge" and
"Cloud" appear twice instead of just once in PowerPoint.

The second instances are text boxes that show in LibreOffice alas
were made (intentionally) invisible in PowerPoint.


Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 66b1ebd4ddc7127a923bf81eb569e7f99dd52022
CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US

all the way back to

Version: 7.0.7.0.0+
Build ID: 54e9dd41dc9dd45af12c9346199f601ea4a5994d
CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2021-05-07_08:22:18

and even 6.4.
Comment 1 Gerald Pfeifer 2022-06-16 16:45:24 UTC
Created attachment 180800 [details]
Visual comparison Office 365 (left) vs LibreOffice 7.4 (right)
Comment 2 raal 2022-06-20 16:35:21 UTC
Confir in Version: 7.4.0.0.beta1+ / LibreOffice Community
Build ID: 6ab56a4fc946f6294513f23a3ea47aa0aa154b7d
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo

and Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 Gerald Pfeifer 2022-10-25 23:24:30 UTC
Bug #151547 (in form of a larger reproducer) appeared related/similar
originally, but it turned out that while that one is fixed it has a
different root cause, and I verified this one is still relevant with

  Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 2486d99c6053af1414117faac2c0db18c0d344c4
  CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 4 Commit Notification 2023-01-04 20:39:21 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0cc9aaae5dc6655490513e8e4a93967f6248e23c

tdf#149588 pptx import: transparency at SolidFill

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-06 09:29:56 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2e3cf5e21c9a4aba8623e89e5e472efa6586619d

tdf#149588 pptx import: transparency at SolidFill

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-01-06 09:29:59 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c27ba904366a966c2f4cc8fe2a04d47a41b3cc1d

tdf#149588 pptx import: transparency at SolidFill

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gerald Pfeifer 2023-01-09 23:35:12 UTC
As the original reporterhHappy to confirm this as fixed with

  Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 8336c61ba059551cb74df5ec53d2b45a3cf41814
  CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

now that -dev builds are working again.
Comment 8 Xisco Faulí 2023-01-24 10:36:18 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard